# llm-tab-cleaner

./: .bandit  .codecov.yml  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  API_REFERENCE_ENHANCED.md  ARCHITECTURE.md  AUTONOMOUS_SDLC_EXECUTION_FINAL_REPORT.md  AUTONOMOUS_SDLC_EXECUTION_FINAL_REPORT_v5.md  AUTONOMOUS_SDLC_EXECUTION_FINAL_REPORT_v6.md  AUTONOMOUS_SDLC_EXECUTION_FINAL_REPORT_v7.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_FINAL_REPORT_v8.md  AUTONOMOUS_SDLC_REPORT.md  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.production  FINAL_REPORT.md  Makefile  PROJECT_CHARTER.md  README.md  RESEARCH_PAPER_DRAFT.md  SECURITY.md  WORKFLOW_SETUP.md  comprehensive_quality_gates.py  coverage.json  deployment_report_20250814_040444.json  deployment_report_20250815_190712.json  deployment_summary_20250814_040444.md  deployment_summary_20250815_190712.md  docker-compose.yml  production_deployment.py  (+17 more)
.devcontainer/: devcontainer.json  post-create.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml
.terragon/: config.yaml  value-metrics.json
deployment/: docker-compose.production.yml  production-ready.yml
deployment/k8s/: deployment.yaml
deployment/scripts/: deploy.sh  production-deploy.sh
deployment/terraform/: main.tf
docs/: ROADMAP.md  SDLC_ENHANCEMENT_SUMMARY.md  SETUP_REQUIRED.md
docs/adr/: 000-template.md  001-llm-provider-architecture.md
docs/monitoring/: observability-setup.md
docs/workflows/: README.md  ci.yml.template  release.yml.template  security.yml.template
docs/workflows/examples/: ci.yml
examples/: enhanced_pipeline_example.py
quality_reports/: quality_gates_report_20250811_121203.json  quality_gates_report_20250811_121628.json  quality_gates_report_20250812_231702.json  quality_gates_report_20250812_232746.json  quality_gates_summary_20250811_121203.md  quality_gates_summary_20250811_121628.md  quality_gates_summary_20250812_231702.md  quality_gates_summary_20250812_232746.md
research_results/: validation_results.json
src/llm_tab_cleaner/: __init__.py  adaptive.py  adaptive_learning.py  adaptive_meta_routing.py  advanced_security.py  auto_scaling.py  backup.py  benchmarks.py  caching.py  cleaning_rule.py  cli.py  compliance.py  confidence.py  core.py  cross_modal_calibration.py  deployment.py  distributed.py  federated_learning.py  federated_quality_learning.py  health.py  i18n.py  incremental.py  llm_providers.py  monitoring.py  multimodal_cleaning.py  neural_confidence.py  optimization.py  profiler.py  research.py  security.py  spark.py  streaming.py  validation.py
src/llm_tab_cleaner/translations/: de.json  en.json  es.json  fr.json  ja.json  zh.json
tests/: __init__.py  conftest.py  test_advanced_security.py  test_auto_scaling.py  test_cleaning_rule.py  test_cli.py  test_confidence.py  test_core.py  test_incremental.py  test_research.py
tests/e2e/: __init__.py
tests/fixtures/: __init__.py  sample_datasets.py
tests/integration/: __init__.py  test_end_to_end_pipeline.py
tests/performance/: __init__.py  test_benchmarks.py
tests/unit/: __init__.py
